--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "ioredis": "^5.4.1",
+    "node-fetch": "^2.7.0",
     "pg": "^8.11.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/ioredis": "^4.28.10",
+    "@types/node-fetch": "^2.6.4",
     "@types/node": "^20.11.30",
     "@types/pg": "^8.10.9",
     "ts-node": "^10.9.2",
