--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,3 @@
-# Environment Configuration
-# Copy this file to .env and fill in your values
-
-# Environment (development, staging, production)
-NODE_ENV=development
-
-# API Server Port (only used by agents-api)
-PORT=3000
-
-# Database Configuration
-# Postgres connection string for agents-db
-DATABASE_URL=postgresql://user:password@localhost:5432/agents_db
-
-# Redis Configuration (optional)
-# Redis connection string for agents-queue
-# Leave empty to disable Redis-based job queuing
-REDIS_URL=redis://localhost:6379
-
-# Service URLs
-# URL of the Core backend for the current environment
-CORE_API_URL=http://localhost:4000
-
-# Public URL of the agents API in the current environment
-PUBLIC_AGENTS_URL=http://localhost:3000
-
-# Logging
-# Log level: debug, info, warn, error
-LOG_LEVEL=info
-
-# Optional: Version and Build Information
-# These are typically set by the CI/CD pipeline
-# APP_VERSION=1.0.0
-# GIT_COMMIT=abc123
-# BUILD_TIME=2024-01-01T00:00:00Z
+OPERATOR_QUEUE_URL=
+LOG_LEVEL=
+OS_ROOT=https://blackroad.systems
