--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
+    "dev": "ts-node src/index.ts",
     "build": "tsc",
+    "start": "node dist/index.js",
+    "test": "jest",
     "start:api": "node dist/api/index.js",
     "start:worker": "node dist/worker/index.js",
     "dev:api": "ts-node src/api/index.ts",
@@ -21,9 +24,14 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/ioredis": "^4.28.10",
-    "@types/node-fetch": "^2.6.4",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.30",
+    "@types/node-fetch": "^2.6.4",
     "@types/pg": "^8.10.9",
+    "@types/supertest": "^2.0.16",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
