--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,10 @@
     "rootDir": "src",
     "outDir": "dist",
     "module": "commonjs",
-    "target": "es2019",
-    "lib": ["es2020"],
-    "types": ["node"],
+    "target": "ES2022",
+    "lib": ["ES2022"],
+    "types": ["node", "jest"],
+    "moduleResolution": "node",
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
@@ -15,5 +16,5 @@
     "skipLibCheck": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "tests"]
 }
