Add standard service endpoints and configuration

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-OPERATOR_QUEUE_URL=
-LOG_LEVEL=
 OS_ROOT=https://blackroad.systems
+SERVICE_BASE_URL=https://operator.blackroad.systems
+LOG_LEVEL=info
+PORT=8080
