--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development ts-node-dev src/index.ts",
+    "dev": "ts-node src/index.ts",
     "build": "tsc",
-    "start": "NODE_ENV=production node dist/index.js",
+    "start": "node dist/index.js",
     "test": "jest",
     "start:api": "node dist/api/index.js",
     "start:worker": "node dist/worker/index.js",
