--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "blackroad-os-operator",
   "version": "0.1.0",
   "description": "BlackRoad OS Agents Orchestration Service scaffold.",
-  "main": "dist/index.js",
+  "main": "dist/server.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "dev": "tsx src/server.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/server.js",
+    "lint": "eslint ."
   },
   "dependencies": {
     "dotenv": "^16.4.5",
@@ -16,7 +17,13 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
-    "ts-node-dev": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.12.1",
+    "@typescript-eslint/parser": "^8.12.1",
+    "eslint": "^9.5.0",
+    "tsx": "^4.15.7",
     "typescript": "^5.4.5"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
