--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --respawn src/index.ts",
+    "dev:worker": "ts-node-dev --respawn src/worker/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "start:worker": "node dist/worker/index.js"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
