--- a/package.json
+++ b/package.json
@@ -8,11 +8,8 @@
     "dev": "tsx src/server.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js",
-    "lint": "eslint ."
-    "dev": "ts-node-dev --respawn src/index.ts",
-    "dev:worker": "ts-node-dev --respawn src/worker/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
+    "lint": "eslint .",
+    "dev:worker": "tsx src/worker/index.ts",
     "start:worker": "node dist/worker/index.js"
   },
   "dependencies": {
