--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "dist/server.js",
   "license": "MIT",
   "scripts": {
-    "dev": "tsx src/server.ts",
+    "dev": "bun run src/server.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/server.js",
+    "start": "bun run src/server.ts",
     "lint": "eslint .",
     "dev:worker": "tsx src/worker/index.ts",
     "start:worker": "node dist/worker/index.js"
