--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "build": "tsc -p tsconfig.json",
     "start": "bun run src/server.ts",
     "lint": "eslint .",
+    "test": "vitest",
     "dev:worker": "tsx src/worker/index.ts",
     "start:worker": "node dist/worker/index.js"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -22,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^8.12.1",
     "@typescript-eslint/parser": "^8.12.1",
     "eslint": "^9.5.0",
+    "vitest": "^4.0.13",
     "tsx": "^4.15.7",
     "typescript": "^5.4.5"
   },
