--- a/infra/Dockerfile
+++ b/infra/Dockerfile
@@ -1,21 +1,24 @@
-# BlackRoad OS Operator - Dockerfile
-FROM python:3.11-slim
-
-# Set working directory
+# syntax=docker/dockerfile:1.6
+FROM node:20-alpine AS deps
 WORKDIR /app
+RUN corepack enable
+COPY package.json pnpm-lock.yaml* pnpm-workspace.yaml* ./
+RUN pnpm install --frozen-lockfile || pnpm install --no-frozen-lockfile
 
-# Copy requirements first for better caching
-COPY infra/requirements.txt /app/requirements.txt
+FROM node:20-alpine AS builder
+WORKDIR /app
+RUN corepack enable
+COPY --from=deps /app/node_modules ./node_modules
+COPY . .
+RUN pnpm build
 
-# Install dependencies
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy application code
-COPY app/ /app/app/
-COPY workers/ /app/workers/
-
-# Expose port
-EXPOSE 8000
-
-# Run the application
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+FROM node:20-alpine AS runner
+WORKDIR /app
+ENV NODE_ENV=production
+RUN corepack enable
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/package.json ./package.json
+COPY --from=builder /app/node_modules ./node_modules
+EXPOSE 3000
+CMD ["pnpm", "start"]
