--- a/infra/railway.toml
+++ b/infra/railway.toml
@@ -1,14 +1,10 @@
-# BlackRoad OS Operator - Railway deployment configuration
-# Sample configuration file for Railway.app deployment
-# No secrets should be stored in this file
-
 [build]
-builder = "DOCKERFILE"
-dockerfilePath = "infra/Dockerfile"
+builder = "NIXPACKS"
 
 [deploy]
-startCommand = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
-healthcheckPath = "/health"
-healthcheckTimeout = 300
+healthcheckPath = "/api/health"
 restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
+restartPolicyMaxRetries = 3
+
+[variables]
+NODE_ENV = "production"
