--- a/package.json
+++ b/package.json
@@ -1,32 +1,42 @@
 {
-  "name": "blackroad-os-operator",
-  "version": "0.1.0",
-  "description": "BlackRoad OS Agents Orchestration Service scaffold.",
-  "main": "dist/index.js",
-  "license": "MIT",
+  "name": "blackroad-os-prism-console",
+  "version": "0.0.1",
+  "private": true,
+  "description": "Prism Console is the single-pane-of-glass for every BlackRoad environment.",
   "scripts": {
-    "dev": "tsx src/index.ts",
-    "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js",
-    "lint": "eslint .",
-    "test": "vitest run"
+    "dev": "next dev",
+    "build": "next build && pnpm run postbuild",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "vitest run",
+    "postbuild": "tsx scripts/postbuild.ts"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "js-yaml": "^4.1.0"
+    "clsx": "^2.1.1",
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.30",
-    "@typescript-eslint/eslint-plugin": "^8.12.1",
-    "@typescript-eslint/parser": "^8.12.1",
-    "eslint": "^9.5.0",
-    "tsx": "^4.15.7",
-    "typescript": "^5.4.5",
-    "vitest": "^1.6.0"
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.1",
+    "@types/node": "^22.5.4",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^9.1.0",
+    "jsdom": "^25.0.1",
+    "postcss": "^8.4.45",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.10",
+    "tsx": "^4.19.0",
+    "typescript": "^5.6.2",
+    "vitest": "^2.1.2"
   },
   "engines": {
-    "node": ">=20"
-  }
+    "node": ">=18"
+  },
+  "packageManager": "pnpm@9.12.2"
 }
