--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 node_modules
-.dist
-.env
-coverage
 dist
-/tests/**/*.js
-/tests/**/*.js.map
-/tests/**/*.d.ts
-/tests/**/*.d.ts.map
+scripts/*.js
+scripts/*.js.map
+tests/**/*.js
+tests/**/*.js.map
+.env
+.pnpm-debug.log
+.DS_Store
