--- a/railway.toml
+++ b/railway.toml
@@ -1,12 +1,7 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "npm install && npm run build"
 
 [deploy]
-startCommand = "npm run start"
-restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
-healthcheckPath = "/api/health"
-healthcheckTimeout = 100
-healthcheckInterval = 20
 numReplicas = 1
+startCommand = "pnpm start"
+healthcheckPath = "/health"
