--- a/railway.toml
+++ b/railway.toml
@@ -3,5 +3,9 @@ builder = "NIXPACKS"
 
 [deploy]
 numReplicas = 1
-startCommand = "pnpm start"
+startCommand = "uvicorn br_operator.main:app --host 0.0.0.0 --port ${PORT:-4000}"
 healthcheckPath = "/health"
+
+[variables]
+PORT = "4000"
+CATALOG_PATH = "/app/agent-catalog/agents.yaml"
