--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "NIXPACKS"
 
 [deploy]
 numReplicas = 1
-startCommand = "uvicorn br_operator.main:app --host 0.0.0.0 --port ${PORT:-4000}"
+startCommand = "uvicorn br_operator.main:app --host 0.0.0.0 --port $PORT"
 healthcheckPath = "/health"
 
 [variables]
