--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,8 @@
 [build]
-builder = "NIXPACKS"
+builder = "DOCKERFILE"
 
 [deploy]
 numReplicas = 1
-startCommand = "uvicorn br_operator.main:app --host 0.0.0.0 --port $PORT"
 healthcheckPath = "/health"
 
 [variables]
