--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "ioredis": "^5.4.1",
+    "itty-router": "^5.0.22",
     "node-cron": "^3.0.3",
     "pino": "^9.5.0"
   },
