--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "tsc -p tsconfig.json && pnpm run postbuild",
     "postbuild": "tsx scripts/postbuild.ts",
     "start": "node dist/index.js",
+    "scaffold": "tsx scripts/scaffold.ts",
     "lint": "ESLINT_USE_FLAT_CONFIG=false eslint .",
     "format": "prettier --check .",
     "test": "vitest run"
